# rp-temp

./: Cargo.toml  README.md  rust-toolchain.toml
src/: fmtbuf.rs  main.rs
