[package]
name = "embassy-rp-hello-world"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

[dependencies]
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-executor = { version = "0.6.1", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
# cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
embassy-usb-logger = { version = "0.2.0"}
log = "0.4.22"
